DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Nov-29-2003 chooze      Removed XDL in favor of using vpr::Library.
                        NEW VERSION: 0.3.0
Nov-27-2003 patrickh    Moved the plug-in code from snx/plugins into plugins
                        and gave the plug-ins their own build system.
Nov-27-2003 patrickh    Rewrote the build system.
Jul-24-2003 browner     Added the audiere plugin.  this required the
                        modification of the SoundInfo struct for a streaming
                        flag - which means we now support streaming apis
                        NEW VERSION: 0.2.2
Oct-25-2002 patrickh    Replaced use of snx::Singleton<T> with the thread-safe
                        vpr::Singleton<T>.  The header snx/Singleton.h has
                        been removed from the source tree.
                        NEW VERSION: 0.2.1
Oct-14-2002 browner     Modified Sonix to use VPR for output.  And updated the
                        build system accordingly.
                        NEW VERSION: 0.2.0
Sep-13-2002 patrickh    Fixed a nasty segmentation fault, most likely caused
                        by a stack overrrun.
                        NEW VERSION: 0.1.2
Sep-04-2002 nonchocoboy AudioWorks plugin now actually works.
                        NEW VERSION: 0.1.1
Aug-29-2002 nonchocoboy Changed the build so that the sonix implementations are
                        built as individual shared libraries ready to be loaded
                        dynamically at runtime via the plugin system that was
                        built into sonix earlier. Sonix now only scans the
                        following directories for plugins:
                              ${SNX_BASE_DIR}/share/sonix/plugins
                              ${HOME}/.sonix/plugins
                        NEW VERSION: 0.1.0
Aug-06-2002 patrickh    Developer installations are now constructed using the